--- a/RentCarClient/apps/Admin/src/pages/layouts/layouts.html
+++ b/RentCarClient/apps/Admin/src/pages/layouts/layouts.html
@@ -17,7 +17,7 @@
                     @if(!nav.haveSubNav && checkPermission(nav.permission)){
                         <li [routerLink]="nav.url"
                             routerLinkActive="active"
-                                [routerLinkActiveOptions]="{exact:true}"
+                                [routerLinkActiveOptions]="{exact:nav.url === '/'}"
                                  class="menu-item">
                             <a  class="menu-link">
                                 <i class="bi" [ngClass]="nav.icon"></i>
