--- a/RentCarClient/apps/Admin/src/components/grid/grid.html
+++ b/RentCarClient/apps/Admin/src/components/grid/grid.html
@@ -39,7 +39,7 @@ language="tr"
           field="createdAt"
           title="Oluturulma Tarihi"
           filterType="date-time"
-          format="dd MMM yyyy HH:mm:ss" />
+          format="dd MMM yyyy HH:mm:ss" width="220px" />
         <flexi-grid-column field="createdFullName" title="Oluşturan" />
        <flexi-grid-column
           field="updatedAt"
